--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     "description": "An app that allows you to track your budgets.",
     "background_color": "#01579b",
     "theme_color": "#ffffff",
+    "start_url" : "./index.html",
     "icons": [
         {
           "src": "/img/icons/icons-192x192.png",
