--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
   "dependencies": {
     "compression": "^1.7.4",
+    "dotenv": "^12.0.3",
     "express": "^4.17.2",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
