--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,42 +8,42 @@
     "display": "standalone",
     "icons": [
         {
-          "src": "/img/icons/icons-192x192.png",
+          "src": "./icons/icons-192x192.png",
           "type": "image/png",
           "sizes": "192x192"
         },
         {
-          "src": "/img/icons/icons-512x512.png",
+          "src": "./icons/icons-512x512.png",
           "type": "image/png",
           "sizes": "512x512"
         },
         {
-          "src": "/img/icons/icons-384x384.png",
+          "src": "./icons/icons-384x384.png",
           "type": "image/png",
           "sizes": "384x384"
         },
         {
-          "src": "/img/icons/icons-152x152.png",
+          "src": "./icons/icons-152x152.png",
           "type": "image/png",
           "sizes": "152x152"
         },
         {
-          "src": "/img/icons/icons-144x144.png",
+          "src": "./icons/icons-144x144.png",
           "type": "image/png",
           "sizes": "144x144"
         },
         {
-          "src": "/img/icons/icons-128x128.png",
+          "src": "./icons/icons-128x128.png",
           "type": "image/png",
           "sizes": "128x128"
         },
         {
-          "src": "/img/icons/icons-72x72.png",
+          "src": "./icons/icons-72x72.png",
           "type": "image/png",
           "sizes": "72x72"
         },
         {
-          "src": "/img/icons/icons-96x96.png",
+          "src": "./icons/icons-96x96.png",
           "type": "image/png",
           "sizes": "96x96"
         }
